--- a/pages/audioPage.html
+++ b/pages/audioPage.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Audio Page</title>
-    <!-- <script src="../js/audio.js"></script> -->
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
   </head>
   <body>
@@ -20,16 +19,22 @@
             </li>
         </ul>
     </nav>
-    <h1>Audio Page</h1>
-    <div class="">
-      <audio controls>
-        <source src="https://static.bandlab.com/soundbanks/previews/new-wave-kit.ogg" type="audio/ogg">
-            Your browser does not support the audio element.
-      </audio>
-      <audio controls>
-        <source src="https://static.bandlab.com/soundbanks/previews/synth-organ.ogg" type="audio/ogg">
-                Your browser does not support the audio element.
-      </audio>
+    <div class="audioClass">
+      <div class="sampleOne">
+        <h1 class="audioTitle">Sample 1</h1>
+        <audio controls>
+          <source src="https://static.bandlab.com/soundbanks/previews/new-wave-kit.ogg" type="audio/ogg">
+              Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="sampleTwo">
+        <h1 class="audioTitle">Sample 2</h1>
+        <audio controls>
+          <source src="https://static.bandlab.com/soundbanks/previews/synth-organ.ogg" type="audio/ogg">
+                  Your browser does not support the audio element.
+        </audio>
+      </div>
+
     </div>
 
   </body>
